subrouting added for absenceRequests

--- a/src/app/views/absenceRequests/absenceRequests.html
+++ b/src/app/views/absenceRequests/absenceRequests.html
@@ -1,1 +1,8 @@
-<div>{{vm.title}}</div>
+<div>
+    <div class="table">
+        <div class="row">
+            <!-- NAV -->
+        </div>
+        <div ui-view></div>
+    </div>
+</div>
