--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,3 +14,10 @@
 .has-error {
     border: solid 2px indianred !important;
 }
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+    color: aqua;
+}
