--- a/src/app/views/absenceRequests/my/myRequests.html
+++ b/src/app/views/absenceRequests/my/myRequests.html
@@ -1,17 +1,29 @@
 <div>
     <div class="container" name="filters">
-        <div class="col-md-4 container" name="requestStageFilter">
+        <div class="col-md-3 container" name="requestStageFilter">
             <label>Stage</label>
-            <select ng-model="vm.filter.stageId" chosen="vm.requestStages" ng-options="stage.Id as stage.Description for stage in vm.requestStages" data-placeholder="None" ng-change="vm.loadRequests()">
+            <select class="form-control" ng-model="vm.filter.stageId" chosen="vm.requestStages" ng-options="stage.Id as stage.Description for stage in vm.requestStages" data-placeholder="None" ng-change="vm.loadRequests()">
                 <option value="0"></option>
             </select>
         </div>
 
-        <div class="col-md-4" name="fromDateFilter">
-
+        <div class="col-md-3 container" name="fromDateFilter">
+            <label>From</label>
+            <div>
+                <input class="form-control" type="date" ng-model="vm.filter.fromDate">
+            </div>
         </div>
-        <div class="col-md-4" name="toDateFilter">
-
+        <div class="col-md-3 container" name="toDateFilter">
+            <label>To</label>
+            <div>
+                <input class="form-control" type="date" ng-model="vm.filter.toDate">
+            </div>
+        </div>
+        <div class="col-md-3 container" name="slimView">
+            <label>Slim view</label>
+            <div>
+                <input type="checkbox" ng-model="vm.slimView">
+            </div>
         </div>
     </div>
     <br/>
@@ -19,36 +31,43 @@
     <div class="container col-lg-12">
         <table class="table table-responsive table-striped table-hover text-center">
             <thead>
-                <tr></tr>
                 <tr>
                     <th class="text-center">
-                        Created
+                        <span>Created</span>
+                    </th>
+                    <th class="text-center" ng-if="vm.slimView">
+                        <span>Date(s)</span>
+                    </th>
+                    <th class="text-center" ng-if="!vm.slimView">
+                        <span>Start</span>
+                    </th>
+                    <th class="text-center" ng-if="!vm.slimView">
+                        <span>End</span>
                     </th>
                     <th class="text-center">
-                        Date(s)
+                        <span>Period</span>
                     </th>
                     <th class="text-center">
-                        Period
+                        <span>Reason</span>
                     </th>
                     <th class="text-center">
-                        Reason
-                    </th>
-                    <th class="text-center">
-                        Stage
+                        <span>Stage</span>
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="request in vm.requests.Entities">
                     <td>
-                        <span>{{request.Created | date:"dd MMM"}}</span>
-                        <span class="hidden-sm hidden-xs">{{request.Created | date:"yyyy"}}</span>
-
+                        <span>{{request.Created | date:"dd MMM yy"}}</span>
                     </td>
-                    <td>
-                        <span>{{request.StartDate | date:"dd MMM"}}</span>
-                        <span ng-if="request.Period / 8 > 1"> to {{request.EndDate | date:"dd MMM"}}</span>
-                        <span class="hidden-sm hidden-xs">{{request.EndDate | date:"yyyy"}}</span>
+                    <td ng-if="!vm.slimView">
+                        <span>{{request.StartDate | date:"dd MMM yy"}}</span>
+                    </td>
+                    <td ng-if="!vm.slimView">
+                        <span>{{request.EndDate | date:"dd MMM yy"}}</span>
+                    </td>
+                    <td ng-if="vm.slimView">
+                        <span>{{vm.getDatesRepresentation(request)}}</span>
                     </td>
                     <td>
                         <span ng-if="vm.isAllDayRequest(request.Period)">
